# webapp-test-inputfile

./: CHANGELOG.md  Cargo.toml  Dioxus.toml  Makefile  README.md  build.rs
assets/css/: main.css
assets/js/: test1.js
resources/android/assets/: pre.html
resources/android/res/drawable/: fav.xml
scripts/: android-webview-assets-params.toml  android-webview-params.toml  wv-apk-icon-assemble-r.sh  wva-apk-icon-assemble-r.sh
src/: main.rs
src/components/: mod.rs  test1.rs
