[package]
name = "test-inputfile"
version = "0.1.2"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = """
This is a webapp that provides test for input type=file.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
#license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-test-inputfile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.4", features = ["fullstack"] }
dioxus-desktop = { version = "0.7.4", optional = true }
dioxus-logger = "0.7.4"
console_error_panic_hook = "0.1"

base64 = "0.22.1"

anyhow = { version = "1.0", optional = true }
rfd = { version = "0.17.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rust-version-info-file = "0.2"

[features]
default = []

web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "desktop_dep"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

desktop_dep = ["dep:rfd", "dep:anyhow", "dep:serde","dep:serde_json"]

debian_build = []
