[package]
name = "test-inputfile"
version = "0.1.5"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2024"
description = """
This is a webapp that provides test for input type=file.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
#license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-test-inputfile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus family
dioxus = { version = "0.7.7", features = ["fullstack"] }
dioxus-desktop = { version = "0.7.7", optional = true }

# what dioxus depends on

# what dioxus depends on, optional
anyhow = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

# other, optional
console_error_panic_hook = { version = "0.1", optional = true }
rfd = { version = "0.17.2", optional = true }
serde_json = { version = "1.0", optional = true }

# other
base64 = "0.22.1"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rust-version-info-file = "0.2"

[features]
default = []

web = ["dioxus/web", "dep:console_error_panic_hook"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop", "desktop_dep"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

desktop_dep = ["dep:rfd", "dep:anyhow", "dep:serde","dep:serde_json"]

debian_build = []

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
